k8s/apps/prod/lubelogger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubelogger
  namespace: lubelogger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lubelogger
  template:
    metadata:
      labels:
        app: lubelogger
    spec:
      containers:
        - name: lubelogger
          image: ghcr.io/hargata/lubelogger:v1.7.3
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            # - name: config
            #   mountPath: /App/config
            - name: data
              mountPath: /App/data
            # - name: translations
            #   mountPath: /App/wwwroot/translations
            # - name: documents
            #   mountPath: /App/wwwroot/documents
            # - name: images
            #   mountPath: /App/wwwroot/images
            # - name: temp
            #   mountPath: /App/wwwroot/temp
            # - name: log
            #   mountPath: /App/log
            - name: keys
              mountPath: /root/.aspnet/DataProtection-Keys
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lubelogger-data
        - name: keys
          persistentVolumeClaim:
            claimName: lubelogger-keys
